<?php

namespace App\Core;

use Psr\Container\ContainerInterface;

class Container implements ContainerInterface
{

    /**
     * @inheritDoc
     */
    public function get(string $id)
    {
        // TODO: Implement get() method.
    }

    /**
     * @inheritDoc
     */
    public function has(string $id): bool
    {
        // TODO: Implement has() method.
    }
}
