<?php

namespace App\Notification\Notifiers;

use App\Notification\NotificationServiceInterface;

class EmailNotificationService implements NotificationServiceInterface
{

    public function notify(string $message): bool
    {
        // TODO: Implement notify() method.
    }
}
